rust/kcl-lib/tests/argument_error/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing argument_error.kcl
---
KCL Semantic error

  × semantic: This function expected the input argument to be of type
  │ Vec<KclValue> but it's actually of type Function
   ╭─[5:5]
 4 │ 
 5 │ map(f, [0, 1])
   ·     ┬
   ·     ╰── tests/argument_error/input.kcl
   ╰────
